finish Pancake page and link the pages

--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -51,6 +51,7 @@
     <em><h3>step 7</h3></em>
     <li><strong>Serve hot and enjoy!</strong></li>
 </ol>
-<p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p>
+<strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p>
+<p><a href="./pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></strong>
 </body>
 </html>
