--- a/recipes.html
+++ b/recipes.html
@@ -10,6 +10,8 @@
         
         <ul>
             <strong><li><p><a href="./recipes/mac-n-cheese.html" rel="noopener noreferrer">Mac'n'Cheese Recipe</a></p></li></strong>
+            <strong><p><a href="./pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></strong>
+
         </ul>
     </body>
 </html>
