--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -11,5 +11,40 @@
         <h2>A pancake is a flat cake, often thin and round, prepared from a starch-based batter that may contain eggs, milk and butter</h2>
 
         <p>Serve these pancakes with butter and syrup, or up the ante with toppings such as sprinkles, chopped bittersweet chocolate, and sliced or chopped fruit for a perfect breakfast.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li><strong>2 cups whole milk</strong></li>
+            <li><strong>1/4 cup white vinegar</strong></li>
+            <li><strong>2 1/2 cups flour</strong></li>
+            <li><strong>3/4 cup sugar</strong></li>
+            <li><strong>2 teaspoons baking powder</strong></li>
+            <li><strong>1 teaspoon baking soda</strong></li>
+            <li><strong>1 teaspoon salt</strong></li>
+            <li><strong>3 large eggs</strong></li>
+            <li><strong>1 teaspoon vanilla extract</strong></li>
+            <li><strong>1 tablespoon butter, softened, or as needed, for greasing, plus more for serving</strong></li>
+            <li><strong>toppings of choice, e.g. maple syrup or fruit, for serving</strong></li>
+        </ul>
+
+        <h2>Steps to make the recipe</h2>
+
+        <ol>
+            <h3><em>Step 1</em></h3>
+            <li><strong>Preheat a griddle to 300 degrees F (175 degrees C).</strong></li>
+            <h3><em>Step 2</em></h3>
+            <li><strong>Stir together milk and vinegar in a small bowl or a 4-cup liquid measuring cup.</strong></li>
+            <h3><em>Step 3</em></h3>
+            <li><strong>Whisk together flour, sugar, baking powder, baking soda, and salt in a second bowl.</strong></li>
+            <h3><em>Step 4</em></h3>
+            <li><strong>Beat eggs in a large bowl until smooth. Add vanilla and milk mixture; whisk together. Add flour mixture to bowl with egg mixture and whisk until just combined. (Batter will be lumpy.) Let rest 3 minutes and gently stir again.</strong></li>
+            <h3><em>Step 5</em></h3>
+            <li><strong>Melt some butter on the griddle, then carefully wipe with a paper towel. (You want just a bit of a sheen; don’t overgrease the griddle.) Spoon batter in 1/3-cup portions onto griddle. Cook until bubbles form on surface of batter, about 2 1/2 minutes.</strong></li>
+            <h3><em>Step 6</em></h3>
+            <li><strong>Flip pancakes and cook until browned on the other side, about 1 1/2 minutes more. Repeat with remaining batter. Serve immediately with butter and toppings.</strong></li>
+        </ol>
+
+        <strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p>
+        <p><a href="./mac-n-cheese.html" rel=" noopener noreferrer">Mac'n'Cheese Recipe</a></p></strong>
     </body>
 </html>
