finish oreo-cheesecake and link all pages together

--- a/recipes.html
+++ b/recipes.html
@@ -10,7 +10,8 @@
         
         <ul>
             <strong><li><p><a href="./recipes/mac-n-cheese.html" rel="noopener noreferrer">Mac'n'Cheese Recipe</a></p></li></strong>
-            <strong><p><a href="./pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></strong>
+            <li><strong><p><a href="./recipes/pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></strong></li>
+            <li><strong><p><a href="./recipes/Oreo-cheesecake.html" rel=" noopener noreferrer">Oreo-Cheesecake Recipe</a></p></strong></li>
 
         </ul>
     </body>
