--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -51,7 +51,13 @@
     <em><h3>step 7</h3></em>
     <li><strong>Serve hot and enjoy!</strong></li>
 </ol>
-<strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p>
-<p><a href="./pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></strong>
+
+<ul>
+<li><strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p></li>
+<li><p><a href="./pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></li>
+<li><p><a href="./Oreo-cheesecake.html" rel=" noopener noreferrer">Oreo-Cheesecake</a></p></li>
+
+
+</strong> </ul>
 </body>
 </html>
