--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -43,8 +43,14 @@
             <h3><em>Step 6</em></h3>
             <li><strong>Flip pancakes and cook until browned on the other side, about 1 1/2 minutes more. Repeat with remaining batter. Serve immediately with butter and toppings.</strong></li>
         </ol>
+        
+        <ul>
 
-        <strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p>
-        <p><a href="./mac-n-cheese.html" rel=" noopener noreferrer">Mac'n'Cheese Recipe</a></p></strong>
+        <li><strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p></li>
+        <li><p><a href="./mac-n-cheese.html" rel=" noopener noreferrer">Mac'n'Cheese Recipe</a></p></li>
+        <li><p><a href="./Oreo-cheesecake.html" rel=" noopener noreferrer">Oreo-Cheesecake</a></p></li>
+        </strong> 
+    
+    </ul>
     </body>
 </html>
