--- a/recipes/Oreo-cheesecake.html
+++ b/recipes/Oreo-cheesecake.html
@@ -38,7 +38,7 @@
         
         <ul>
         
-        <li><strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p></li>
+        <li><strong><p><a href="../index.html" rel=" noopener noreferrer">Back to the main page</a></p></li>
 
         <li><p><a href="./pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></li>
 
