--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -53,7 +53,7 @@
 </ol>
 
 <ul>
-<li><strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p></li>
+<li><strong><p><a href="../index.html" rel=" noopener noreferrer">Back to the main page</a></p></li>
 <li><p><a href="./pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></li>
 <li><p><a href="./Oreo-cheesecake.html" rel=" noopener noreferrer">Oreo-Cheesecake</a></p></li>
 
