--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -46,7 +46,7 @@
         
         <ul>
 
-        <li><strong><p><a href="../recipes.html" rel=" noopener noreferrer">Back to the main page</a></p></li>
+        <li><strong><p><a href="../index.html" rel=" noopener noreferrer">Back to the main page</a></p></li>
         <li><p><a href="./mac-n-cheese.html" rel=" noopener noreferrer">Mac'n'Cheese Recipe</a></p></li>
         <li><p><a href="./Oreo-cheesecake.html" rel=" noopener noreferrer">Oreo-Cheesecake</a></p></li>
         </strong> 
