add css in mac-n-cheese

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link href="style.css" rel="stylesheet"> 
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <img src="https://images.ecestaticos.com/JjMiY54z4BKuT8mzuqiONTlNBt4=/0x109:2119x1301/1200x675/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2Fb02%2F4cc%2F30d%2Fb024cc30d62f4897628336118f716af1.jpg" alt="image of a chef cooking">
+        <h1 style="text-align: center; font-family: 'Times New Roman', Times, serif; font-weight: bold; font-size: 100px;">Odin Recipes</h1>
+        <img  id="chef"     src="https://images.ecestaticos.com/JjMiY54z4BKuT8mzuqiONTlNBt4=/0x109:2119x1301/1200x675/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2Fb02%2F4cc%2F30d%2Fb024cc30d62f4897628336118f716af1.jpg" alt="image of a chef cooking">
         
+
+        <div class="links">
         <ul>
             <strong><li><p><a href="./recipes/mac-n-cheese.html" rel="noopener noreferrer">Mac'n'Cheese Recipe</a></p></li></strong>
             <li><strong><p><a href="./recipes/pancakes.html" rel=" noopener noreferrer">Pancake Recipe</a></p></strong></li>
             <li><strong><p><a href="./recipes/Oreo-cheesecake.html" rel=" noopener noreferrer">Oreo-Cheesecake Recipe</a></p></strong></li>
 
         </ul>
+        </div>
     </body>
 </html>
