--- a/recipes/Oreo-cheesecake.html
+++ b/recipes/Oreo-cheesecake.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Oreo-Cheesecake</title>
+        <link href="../style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Oreo-Cheesecake</h1>
