--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Pancakes-Recipe</title>
+        <link href="../style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Pancakes</h1>
+        <div id="pekka">
+
         <img src="https://www.allrecipes.com/thmb/DZ5WtIe2s6rGk-rIEZDkMA6mGj4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7568285-perfect-pancakes-KH-4x3-218e2c39174c4a2293fca0ab752b38a8.jpg" alt="Pancakes">
-        
+        </div>
         <h2>A pancake is a flat cake, often thin and round, prepared from a starch-based batter that may contain eggs, milk and butter</h2>
 
         <p>Serve these pancakes with butter and syrup, or up the ante with toppings such as sprinkles, chopped bittersweet chocolate, and sliced or chopped fruit for a perfect breakfast.</p>
