--- a/recipes/Oreo-cheesecake.html
+++ b/recipes/Oreo-cheesecake.html
@@ -5,36 +5,38 @@
         <title>Oreo-Cheesecake</title>
         <link href="../style.css" rel="stylesheet">
     </head>
-    <body>
-        <h1>Oreo-Cheesecake</h1>
-        <img src="https://www.allrecipes.com/thmb/07pH2BFiT039hKoye3mj-UCviDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7497371-oreo-cheesecake-bars-DDMFS-beauty-4x3-BG-9335-7aa15259eab74d4893f7dd3a3273855a.jpg" alt="Oreo-Cheesecake">
+    <body id="Oreo">
+        <h1 style="color: white; text-align: center; font-size: 100px;">Oreo-Cheesecake</h1>
+        <center><img  id="vanilla" src="https://www.allrecipes.com/thmb/07pH2BFiT039hKoye3mj-UCviDg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7497371-oreo-cheesecake-bars-DDMFS-beauty-4x3-BG-9335-7aa15259eab74d4893f7dd3a3273855a.jpg" alt="Oreo-Cheesecake"> </center>
 
-        <h3>Cheesecake is a sweet dessert made with a soft fresh cheese, eggs, and sugar. It may have a crust or base made from crushed cookies, graham crackers, pastry, or sometimes sponge cake</h3>
-        <p>These oreo cheesecake bars are simply irresistible for everyone loving cookies and cream. They are surprisingly easy to make and are the perfect treat for lots of people.</p>
+        <h3 style="text-align: center; color: white; font-family: Verdana, Geneva, Tahoma, sans-serif;">Cheesecake is a sweet dessert made with a soft fresh cheese, eggs, and sugar. It may have a crust or base made from crushed cookies, graham crackers, pastry, or sometimes sponge cake</h3>
+        <p style="text-align: center; font-weight: 600; font-family: Verdana, Geneva, Tahoma, sans-serif;">These oreo cheesecake bars are simply irresistible for everyone loving cookies and cream. They are surprisingly easy to make and are the perfect treat for lots of people.</p>
 
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 style="color: antiquewhite;">Ingredients</h2>
+        
+        <div id="chocolate"><ul>
             <li><strong><em>Oreos</em>: This recipe starts with a package of Oreos (or your preferred chocolate sandwich cookies with white filling).</strong></li>
-            <li><strong><em>Butter</em> Half a stick of salted butter lends richness and flavor.</strong></li>
+            <li class="sandwich"><strong><em>Butter</em> Half a stick of salted butter lends richness and flavor.</strong></li>
             <li><strong><em>Cream cheese</em> Of course, you’ll need softened cream cheese for these cream cheese bars. </strong></li>
-            <li><strong><em>Sugar</em> A cup of white sugar lends the perfect amount of sweetness.</strong></li>
+            <li class="sandwich"><strong><em>Sugar</em> A cup of white sugar lends the perfect amount of sweetness.</strong></li>
             <li><strong><em>Sour cream</em>: Sour cream adds creaminess and subtle tangy flavor.</strong></li>
-            <li><strong><em>Eggs</em> Three eggs give the bars richness and help bind the batter together. </strong></li>
+            <li class="sandwich"><strong><em>Eggs</em> Three eggs give the bars richness and help bind the batter together. </strong></li>
             <li><strong><em>Vanilla</em> Vanilla extract enhances the overall flavor. </strong></li>
             <li><strong><em>Salt</em>: A pinch of salt also enhances the flavor, but it won’t make the bars taste salty.</strong></li>
         </ul>
+        </div>
         <h2>Steps</h2>
         <ol>
-            <h3>Step 1</h3>
-            <li><strong>Pulse the cookies in a food processor. Pulse again with butter.</strong></li>
-            <h3>Step 2</h3>
-            <li><strong>Press the mixture into a prepared pan and bake until set. </strong></li>
-            <h3>Step 3</h3>
-            <li><strong>Make the filling, pour the batter onto the crust, and sprinkle with cookie crumbs. </strong></li>
-            <h3>Step 4</h3>
-            <li><strong>Bake until the filling is set, cool, and chill. </strong></li>
-            <h3>Step 5</h3>
-            <li><strong>Cut the Oreo cheesecake bars into squares. </strong></li>
+            <h3 style="font-size: 20px; text-align: left; font-weight: 800; font-family: Verdana, Geneva, Tahoma, sans-serif;">Step 1</h3>
+            <li style="color: white; font-size: 23px; text-align: left; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><strong>Pulse the cookies in a food processor. Pulse again with butter.</strong></li>
+            <h3 style="font-size: 20px; text-align: left; font-weight: 800; font-family: Verdana, Geneva, Tahoma, sans-serif;">Step 2</h3>
+            <li style="color: white; font-size: 23px; text-align: left; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><strong>Press the mixture into a prepared pan and bake until set. </strong></li>
+            <h3 style="font-size: 20px; text-align: left; font-weight: 800; font-family: Verdana, Geneva, Tahoma, sans-serif;">Step 3</h3>
+            <li style="color: white; font-size: 23px; text-align: left; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><strong>Make the filling, pour the batter onto the crust, and sprinkle with cookie crumbs. </strong></li>
+            <h3 style="font-size: 20px; text-align: left; font-weight: 800; font-family: Verdana, Geneva, Tahoma, sans-serif;">Step 4</h3>
+            <li style="color: white; font-size: 23px; text-align: left; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><strong>Bake until the filling is set, cool, and chill. </strong></li>
+            <h3 style="font-size: 20px; text-align: left; font-weight: 800; font-family: Verdana, Geneva, Tahoma, sans-serif;">Step 5</h3>
+            <li style="color: white; font-size: 23px; text-align: left; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" ><strong>Cut the Oreo cheesecake bars into squares. </strong></li>
         </ol>
         
         <ul>
